<resources>
    <string name="app_name">QuizMaster</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Welcome Fragment -->
    <string name="fragment_welcome_title_textView">Welcome to QuizMaster</string>
    <string name="fragment_welcome_continue_button">Continue</string>

    <!-- About Fragment -->
    <string name="fragment_about_information_textView">
        This app will help you increase your general and specific knowledge about a variety of
        subjects through the use of multiple interesting quizzes that you can practice and track
        your progress on.
    </string>

    <!-- Quiz Bank Fragment -->
    <string name="fragment_quiz_bank_title_textView">Select a Quiz and Press Continue</string>
    <string name="fragment_quiz_bank_continue_button">Continue</string>

    <!-- Take Quiz Fragment -->
    <string name="fragment_take_quiz_submitButton">Submit</string>
    <string name="fragment_take_quiz_next_button">Next</string>
    <string name="fragment_take_quiz_previous_button">Previous</string>
    <string name="fragment_take_quiz_instructions_textView">
        Answer the quizlets and press submit when you are done. You can submit without completing.
        If you exit without submitting, the quiz will not be accounted.
    </string>

    <!-- Extended Quiz View Fragment -->
    <string name="fragment_extended_view_quiz_resetData_button">Reset Data</string>
    <string name="fragment_extended_view_quiz_takeQuiz_button">Take Quiz</string>

    <!-- Quiz Result Fragment -->
    <string name="fragment_quiz_result_title_textView">Default Quiz Title</string>
    <string name="fragment_quiz_result_totalQuestions_textView">Total Questions</string>
    <string name="fragment_quiz_result_totalAnswered_textView">Total Answered</string>
    <string name="fragment_quiz_result_totalCorrect_textView">Total Correct</string>
    <string name="fragment_quiz_result_totalWrong_textView">Total Wrong</string>
    <string name="fragment_quiz_result_percentage_textView">Percentage</string>
    <string name="fragment_quiz_result_continue_button">Continue</string>
    <string name="fragment_quiz_result_retry_button">Retry</string>
    <string name="fragment_quiz_result_result_textView_failed">You failed</string>
    <string name="fragment_quiz_result_result_textView_passed">You passed</string>

    <!-- Quiz View Fragment -->
    <string name="fragment_view_quiz_timesCompleted_textView">Times Completed:</string>
    <string name="fragment_view_quiz_averagePercentage_textView">Average Percentage:</string>
    <string name="fragment_view_quiz_title_textView">Default Quiz Title</string>

    <!-- Quiz Bank RecyclerView Item -->
    <string name="fragment_quiz_bank_recyclerView_item_title">Default Quiz Title</string>
    <string name="fragment_quiz_bank_recyclerView_item_description">Default quiz description</string>

</resources>